# Helmi_FEM

./: .gitignore  LICENSE  README.md  pyproject.toml  release_instructions.txt  requirements.txt
examples/: waveguide.py
examples/dielectric_scatterer/: README.md  scatterer_fem.py  scatterer_mesh.py
examples/horn/: README.md  horn_fem.py  horn_mesh.py
examples/slit_diffraction/: README.md  slit_fem.py  slit_mesh.py
examples/waveguide/: waveguide.py
helmi/: Helmholtz.py  __init__.py  forms.py  helmholtz.py  helper.py
